Fix text overflow, contact us card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,12 @@ body{
     padding-top: 40px;
 }
 
+/* .aboutcard .cardHeader
+{
+    position: sticky;
+    top: 0px;
+    background-color: white;
+} */
 
 /* Footer  */
 
@@ -118,6 +124,7 @@ body{
     box-shadow: 0 0 32px 8px rgba(53, 51, 51, 0.808);
     margin-bottom: 16px;
     padding-bottom: 16px;
+    overflow: scroll;
 }
 
 .maps{
@@ -157,6 +164,8 @@ body{
 .socialhandles{
     display: flex;
     flex-direction: row;
+    overflow-x: scroll;
+    justify-content: center;
 }
 
 .socialbox{
@@ -190,6 +199,7 @@ body{
 .map-phone{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-bottom: 5px;
 }
 
@@ -201,7 +211,7 @@ body{
     width: 350px;
     height: 100px;
     background-color: rgba(0, 0, 0, 0.055);
-    margin-left: 25px;
+    
     border-radius: 5px;
 }
 
@@ -258,4 +268,9 @@ body{
 
 #dosLoading{
     overflow-y: visible;
+}
+
+.dropdown-menu
+{
+    padding: 8px !important;
 }
